@@ -35,7 +35,7 @@ public class DimensionMismatchException extends MathException {
     public DimensionMismatchException(int dimension1, int dimension2) {
         super("dimension mismatch {0} != {1}",
               new Object[] {
-                new Integer(dimension1), new Integer(dimension2)
+                Integer.valueOf(dimension1), Integer.valueOf(dimension2)
               });
         this.dimension1 = dimension1;
         this.dimension2 = dimension2;
