@@ -35,7 +35,7 @@ public class DuplicateSampleAbscissaException extends MathException  {
      */
     public DuplicateSampleAbscissaException(double abscissa, int i1, int i2) {
         super("Abscissa {0} is duplicated at both indices {1} and {2}",
-              new Object[] { new Double(abscissa), new Integer(i1), new Integer(i2) });
+              new Object[] { Double.valueOf(abscissa), Integer.valueOf(i1), Integer.valueOf(i2) });
     }
 
     /**
