@@ -20,7 +20,6 @@ import java.io.Serializable;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 
-import org.apache.commons.discovery.tools.DiscoverClass;
 import org.apache.commons.math.stat.descriptive.moment.GeometricMean;
 import org.apache.commons.math.stat.descriptive.moment.Kurtosis;
 import org.apache.commons.math.stat.descriptive.moment.Mean;
@@ -56,8 +55,8 @@ import org.apache.commons.math.util.ResizableDoubleArray;
 public class DescriptiveStatistics implements StatisticalSummary, Serializable {
     
     /** Serialization UID */
-    private static final long serialVersionUID = -2734185686570407433L;
-    
+    private static final long serialVersionUID = 4133067267405273064L;
+
     /** hold the window size **/
     protected int windowSize = INFINITE_WINDOW;
     
@@ -113,36 +112,13 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
     }
     
     /**
-     * Create an instance of a <code>DescriptiveStatistics</code>
-     * @param cls the type of <code>DescriptiveStatistics</code> object to
-     *        create. 
-     * @return a new instance. 
-     * @throws InstantiationException is thrown if the object can not be
-     *            created.
-     * @throws IllegalAccessException is thrown if the type's default
-     *            constructor is not accessible.
-     * @deprecated to be removed in commons-math 2.0
+     * Copy constructor.  Construct a new DescriptiveStatistics instance that
+     * is a copy of original.
+     * 
+     * @param original DescriptiveStatistics instance to copy
      */
-    public static DescriptiveStatistics newInstance(Class cls) throws InstantiationException, IllegalAccessException {
-        return (DescriptiveStatistics)cls.newInstance();
-    }
-    
-    /**
-     * Create an instance of a <code>DescriptiveStatistics</code>
-     * @return a new DescriptiveStatistics instance. 
-     * @deprecated to be removed in commons-math 2.0
-     */
-    public static DescriptiveStatistics newInstance() {
-        DescriptiveStatistics factory = null;
-        try {
-            DiscoverClass dc = new DiscoverClass();
-            factory = (DescriptiveStatistics) dc.newInstance(
-                DescriptiveStatistics.class,
-                "org.apache.commons.math.stat.descriptive.DescriptiveStatisticsImpl");
-        } catch(Throwable t) {
-            return new DescriptiveStatisticsImpl();
-        }
-        return factory;
+    public DescriptiveStatistics(DescriptiveStatistics original) {
+        copy(original, this);
     }
     
     /**
@@ -172,6 +148,24 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
         }
     }
 
+    /**
+     * Removes the most recent value from the dataset.
+     */
+    public void removeMostRecentValue() {
+        eDA.discardMostRecentElements(1);
+    }
+
+    /**
+     * Replaces the most recently stored value with the given value.
+     * There must be at least one element stored to call this method.
+     * 
+     * @param v the value to replace the most recent stored value
+     * @return replaced value
+     */
+    public double replaceMostRecentValue(double v) {
+        return eDA.substituteMostRecentElement(v);
+    }
+
     /** 
      * Returns the <a href="http://www.xycoon.com/arithmetic_mean.htm">
      * arithmetic mean </a> of the available values 
@@ -185,7 +179,7 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
      * Returns the <a href="http://www.xycoon.com/geometric_mean.htm">
      * geometric mean </a> of the available values
      * @return The geometricMean, Double.NaN if no values have been added, 
-     * or if the productof the available values is less than or equal to 0.
+     * or if the product of the available values is less than or equal to 0.
      */
     public double getGeometricMean() {
         return apply(geometricMeanImpl);
@@ -387,7 +381,7 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
             try {
                 percentileImpl.getClass().getMethod("setQuantile", 
                         new Class[] {Double.TYPE}).invoke(percentileImpl,
-                                new Object[] {new Double(p)});
+                                new Object[] {Double.valueOf(p)});
             } catch (NoSuchMethodException e1) { // Setter guard should prevent
                 throw new IllegalArgumentException(
                    "Percentile implementation does not support setQuantile");
@@ -568,7 +562,7 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
         try {
             percentileImpl.getClass().getMethod("setQuantile", 
                     new Class[] {Double.TYPE}).invoke(percentileImpl,
-                            new Object[] {new Double(50.0d)});
+                            new Object[] {Double.valueOf(50.0d)});
         } catch (NoSuchMethodException e1) { 
             throw new IllegalArgumentException(
                     "Percentile implementation does not support setQuantile");
@@ -666,5 +660,42 @@ public class DescriptiveStatistics implements StatisticalSummary, Serializable {
      */
     public synchronized void setSumImpl(UnivariateStatistic sumImpl) {
         this.sumImpl = sumImpl;
-    }   
+    }  
+    
+    /**
+     * Returns a copy of this DescriptiveStatistics instance with the same internal state.
+     * 
+     * @return a copy of this
+     */
+    public DescriptiveStatistics copy() {
+        DescriptiveStatistics result = new DescriptiveStatistics();
+        copy(this, result);
+        return result; 
+    }
+     
+    /**
+     * Copies source to dest.
+     * <p>Neither source nor dest can be null.</p>
+     * 
+     * @param source DescriptiveStatistics to copy
+     * @param dest DescriptiveStatistics to copy to
+     * @throws NullPointerException if either source or dest is null
+     */
+    public static void copy(DescriptiveStatistics source, DescriptiveStatistics dest) {
+        // Copy data and window size
+        dest.eDA = source.eDA.copy();
+        dest.windowSize = source.windowSize;
+        
+        // Copy implementations
+        dest.maxImpl = source.maxImpl.copy();
+        dest.meanImpl = source.meanImpl.copy();
+        dest.minImpl = source.minImpl.copy();
+        dest.sumImpl = source.sumImpl.copy();
+        dest.varianceImpl = source.varianceImpl.copy();
+        dest.sumsqImpl = source.sumsqImpl.copy();
+        dest.geometricMeanImpl = source.geometricMeanImpl.copy();
+        dest.kurtosisImpl = source.kurtosisImpl;
+        dest.skewnessImpl = source.skewnessImpl;
+        dest.percentileImpl = source.percentileImpl;
+    }
 }
