@@ -22,11 +22,13 @@ import java.text.ParseException;
 import java.text.ParsePosition;
 import java.util.Locale;
 
+import org.apache.commons.math.util.CompositeFormat;
+
 import junit.framework.TestCase;
 
 public abstract class ComplexFormatAbstractTest extends TestCase {
  
-    ComplexFormat complexFormat = null;
+    CompositeFormat complexFormat = null;
     ComplexFormat complexFormatJ = null;
 
     protected abstract Locale getLocale();
@@ -333,15 +335,15 @@ public abstract class ComplexFormatAbstractTest extends TestCase {
     }
     
     public void testFormatNumber() {
-        ComplexFormat cf = ComplexFormat.getInstance(getLocale());
-        Double pi = new Double(Math.PI);
+        CompositeFormat cf = ComplexFormat.getInstance(getLocale());
+        Double pi = Double.valueOf(Math.PI);
         String text = cf.format(pi);
         assertEquals("3" + getDecimalCharacter() + "14", text);
     }
     
     public void testFormatObject() {
         try {
-            ComplexFormat cf = new ComplexFormat();
+            CompositeFormat cf = new ComplexFormat();
             Object object = new Object();
             cf.format(object);
             fail();
