@@ -69,7 +69,7 @@ public final class MixedListUnivariateImplTest extends TestCase {
 
     /** test stats */
     public void testStats() {
-        List externalList = new ArrayList();
+        List<Object> externalList = new ArrayList<Object>();
 
         DescriptiveStatistics u = new ListUnivariateImpl(externalList,transformers);
 
@@ -91,7 +91,7 @@ public final class MixedListUnivariateImplTest extends TestCase {
     }
 
     public void testN0andN1Conditions() throws Exception {
-        DescriptiveStatistics u = new ListUnivariateImpl(new ArrayList(),transformers);
+        DescriptiveStatistics u = new ListUnivariateImpl(new ArrayList<Object>(),transformers);
 
         assertTrue(
             "Mean of n = 0 set should be NaN",
@@ -120,25 +120,25 @@ public final class MixedListUnivariateImplTest extends TestCase {
 
     public void testSkewAndKurtosis() {
         ListUnivariateImpl u =
-            new ListUnivariateImpl(new ArrayList(), transformers);
+            new ListUnivariateImpl(new ArrayList<Object>(), transformers);
 
         u.addObject("12.5");
-        u.addObject(new Integer(12));
+        u.addObject(Integer.valueOf(12));
         u.addObject("11.8");
         u.addObject("14.2");
         u.addObject(new Foo());
         u.addObject("14.5");
-        u.addObject(new Long(21));
+        u.addObject(Long.valueOf(21));
         u.addObject("8.2");
         u.addObject("10.3");
         u.addObject("11.3");
-        u.addObject(new Float(14.1));
+        u.addObject(Float.valueOf(14.1f));
         u.addObject("9.9");
         u.addObject("12.2");
         u.addObject(new Bar());
         u.addObject("12.1");
         u.addObject("11");
-        u.addObject(new Double(19.8));
+        u.addObject(Double.valueOf(19.8));
         u.addObject("11");
         u.addObject("10");
         u.addObject("8.8");
@@ -153,7 +153,7 @@ public final class MixedListUnivariateImplTest extends TestCase {
     }
 
     public void testProductAndGeometricMean() throws Exception {
-        ListUnivariateImpl u = new ListUnivariateImpl(new ArrayList(),transformers);
+        ListUnivariateImpl u = new ListUnivariateImpl(new ArrayList<Object>(),transformers);
         u.setWindowSize(10);
 
         u.addValue(1.0);
