@@ -17,11 +17,13 @@
 
 package org.apache.commons.math.util;
 
+import org.apache.commons.math.MathRuntimeException;
+
 /**
  * @version $Revision$ $Date$
  */
 public class TestBean {
-    private Double x = new Double(1.0);
+    private Double x = Double.valueOf(1.0);
 
     private String y = "1.0";
 
@@ -57,7 +59,7 @@ public class TestBean {
      * 
      */
     public Double getZ() {
-        throw new RuntimeException();
+        throw new MathRuntimeException("?", null);
     }
 
     /**
